syntax = "proto3";
option go_package = "github.com/JanKoczuba/commons/api";

package api;

service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string CustomerId = 1;
  repeated ItemsWithQuantity Items = 2;
}

message Order {
  string ID = 1;
  string CustomerId = 2;
  string Status = 3;
  repeated Item Items = 4;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

